--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -4,9 +4,9 @@
   <app-product-description></app-product-description>
 
 </div>
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-sm-8">
       <app-product-tracklisting></app-product-tracklisting>
     </div>
-  </div>
+  </div> -->
 </main>
