--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -1,4 +1,23 @@
-
-<div class="row">
-  <app-product-description></app-product-description>
+<main>
+  <div class="row">
+    <app-product-description></app-product-description>
 </div>
+  <div class="row">
+    <div class="col-sm-8">
+      <div class="row tracklisting">
+        <ul>
+          <li>
+            <div class="col-sm-5">
+              <span class="track-number">1</span>
+              <span class="track-name">qwertyuio</span>
+            </div>
+            <div class="col-sm-3 text-right">
+              <span class="track-time">wertyuio</span>
+              <span class="price-and-buy"><button>98</button></span>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</main>
